--- a/docker/nginx/local.conf
+++ b/docker/nginx/local.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name painel.jrspice.com;  # substitua '_' pelo seu domínio real
+    server_name localhost;
     root /var/www/html/public;
     client_max_body_size 20M;
 
@@ -17,7 +17,7 @@ server {
     # PHP-FPM
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass painel-jrspice_app:9000;
+        fastcgi_pass app:9000;  # container PHP
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
