--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -22,8 +22,7 @@ services:
     working_dir: /var/www/html
     volumes:
       - ./:/var/www/html
-    command: >
-      sh -c "(while [ true ]; do php artisan schedule:run --no-interaction; sleep 60; done) & php artisan queue:work --timeout=60 --tries=3 --max-jobs=100 --max-time=3600 --memory=128"
+    command: [ "sh", "-c", "(while [ true ]; do php artisan schedule:run --no-interaction; sleep 60; done) & php artisan queue:work --timeout=60 --tries=3 --max-jobs=100 --max-time=3600 --memory=128" ]
     depends_on:
       - app
       - db
